<resources>
    <string name="app_name">BusyBus</string>
    <string name="title_activity_maps">BusyBus</string>

    <string name="location_permission_denied">Location features as been disabled for current session</string>
    <string name="title_activity_fav">FavActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stations">Stations</string>
    <string name="routes">routes</string>
    <string name="fav_list">Favorite List</string>
    <string name="setting">Settings</string>
    <string name="translink">Translink</string>
    <string name="title_activity_settings">Settings</string>

    <string name="theme">Theme</string>
    <string name="auto">Auto</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="offline">offline</string>
    <string name="get_around_me">get around me</string>
    <string name="update_offline">update offline</string>
    <string name="cancel">cancel</string>
</resources>
